[tool.poetry]
name = "jli_paper02"
version = "0.1.0"
description = ""
authors = ["Soumendra Dhanee <soumendra@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
numpy = "^1.19.5"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
streamlit = "^0.74.1"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
